--- a/sarcasm.ipynb
+++ b/sarcasm.ipynb
@@ -10,20 +10,18 @@
     "\n",
     "Copyright (c) 2017 Brendon Caligari, London, UK\n",
     "\n",
-    "```{text}\n",
-    "This program is free software: you can redistribute it and/or modify\n",
-    "it under the terms of the GNU General Public License as published by\n",
-    "the Free Software Foundation, either version 3 of the License, or\n",
-    "(at your option) any later version.\n",
-    "\n",
-    "This program is distributed in the hope that it will be useful,\n",
-    "but WITHOUT ANY WARRANTY; without even the implied warranty of\n",
-    "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n",
-    "GNU General Public License for more details.\n",
-    "\n",
-    "You should have received a copy of the GNU General Public License\n",
-    "along with this program.  If not, see <http://www.gnu.org/licenses/>.\n",
-    "```\n",
+    "    This program is free software: you can redistribute it and/or modify\n",
+    "    it under the terms of the GNU General Public License as published by\n",
+    "    the Free Software Foundation, either version 3 of the License, or\n",
+    "    (at your option) any later version.\n",
+    "    \n",
+    "    This program is distributed in the hope that it will be useful,\n",
+    "    but WITHOUT ANY WARRANTY; without even the implied warranty of\n",
+    "    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n",
+    "    GNU General Public License for more details.\n",
+    "    \n",
+    "    You should have received a copy of the GNU General Public License\n",
+    "    along with this program.  If not, see <http://www.gnu.org/licenses/>.\n",
     "\n",
     "Strategy:\n",
     "* Export one, or possibly more, sysstat ```.sa``` files as XML\n",
@@ -66,6 +64,18 @@
     "* TODO include link to ```sysstat``` versions\n",
     "* TODO include links to various sysstat binary downloads\n",
     "* Heavy refactoring is required"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sa_directory = './z2'\n",
+    "sa_files = [\"sa04\", \"sa05\", \"sa06\", 'sa07', 'sa08', 'sa09', 'sa10', 'sa11', 'sa12', 'sa13', 'sa14']"
    ]
   },
   {
@@ -270,12 +280,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "sa_directory = './z2'\n",
-    "sa_files = [\"sa04\", \"sa05\", \"sa06\", 'sa07', 'sa08', 'sa09', 'sa10', 'sa11', 'sa12', 'sa13', 'sa14']\n",
-    "\n",
     "sa = SarData()\n",
     "\n",
     "for sa_file in map(lambda sa_file: \"{}/{}\".format(sa_directory, sa_file), sa_files):\n",
@@ -295,7 +304,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa.hostmeta"
@@ -305,6 +316,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -331,7 +343,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -353,7 +367,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -377,7 +393,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -399,7 +417,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -421,7 +441,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -445,7 +467,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -468,7 +492,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "try:\n",
