--- a/sarcasm.ipynb
+++ b/sarcasm.ipynb
@@ -203,14 +203,17 @@
     "    @classmethod\n",
     "    def get_hostmeta_parser(cls, meta_tag):\n",
     "        \"\"\"Returns a parser for Elements under 'host'\"\"\"\n",
-    "        meta_parsers ={'sysname': cls._parse_meta_default,\n",
-    "                       'release': cls._parse_meta_default,\n",
-    "                       'comments': cls._parse_meta_default,\n",
-    "                       'restarts': cls._parse_meta_default,\n",
-    "                       'machine': cls._parse_meta_default,\n",
-    "                       'number-of-cpus': cls._parse_meta_default,\n",
-    "                       'file-date': cls._parse_meta_default,\n",
-    "                       'file-utc-time': cls._parse_meta_default}\n",
+    "        ## we can comment out any problematic ones at runtime\n",
+    "        meta_parsers ={\n",
+    "            'sysname': cls._parse_meta_default,\n",
+    "            'release': cls._parse_meta_default,\n",
+    "            'comments': cls._parse_meta_default,\n",
+    "            'restarts': cls._parse_meta_default,\n",
+    "            'machine': cls._parse_meta_default,\n",
+    "            'number-of-cpus': cls._parse_meta_default,\n",
+    "            'file-date': cls._parse_meta_default,\n",
+    "            'file-utc-time': cls._parse_meta_default\n",
+    "        }\n",
     "        if meta_tag in meta_parsers:\n",
     "            return meta_parsers[meta_tag]\n",
     "        return None\n",
@@ -218,10 +221,16 @@
     "    @classmethod\n",
     "    def get_metric_parser(cls, metric_tag):\n",
     "        \"\"\"Returns a parser for Elements under 'host->statistics'\"\"\"\n",
-    "        metric_parsers = {'queue': cls._parse_metric_queue,\n",
-    "                          'memory': cls._parse_metric_memory,\n",
-    "                          'process-and-context-switch': cls._parse_metric_proc_cswch,\n",
-    "                          'hugepages': cls._parse_metric_hugepages}\n",
+    "        ## we can comment out any problematic ones at runtime\n",
+    "        metric_parsers = {\n",
+    "            'queue': cls._parse_metric_queue,\n",
+    "            'memory': cls._parse_metric_memory,\n",
+    "            'process-and-context-switch': cls._parse_metric_proc_cswch,\n",
+    "            'hugepages': cls._parse_metric_hugepages,\n",
+    "            'paging': cls._parse_metric_paging,\n",
+    "            'io': cls._parse_metric_io,\n",
+    "            'swap-pages': cls._parse_metric_swap_pages\n",
+    "        }\n",
     "        if metric_tag in metric_parsers:\n",
     "            return metric_parsers[metric_tag]\n",
     "        return None\n",
@@ -265,7 +274,38 @@
     "        tmp_dict = dict()\n",
     "        for hpstat in element:\n",
     "            tmp_dict[hpstat.tag] = hpstat.text\n",
-    "        return tmp_dict\n"
+    "        return tmp_dict\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _parse_metric_paging(element):\n",
+    "        \"\"\"paging statistics\"\"\"\n",
+    "        assert(element.attrib['per'] == \"second\")\n",
+    "        ## paging pgpgin|pgpgout|fault|majflt|pgfree|pgscank|pgscand|pgsteal|vmeff-percent\n",
+    "        tmp_dict = element.attrib.copy()\n",
+    "        tmp_dict.pop('per')\n",
+    "        return tmp_dict\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _parse_metric_io(element):\n",
+    "        \"\"\"io metrics\"\"\"\n",
+    "        ## tps | rtps | bread | wtps | bwrtn\n",
+    "        assert(element.attrib['per'] == \"second\")\n",
+    "        tmp_dict = dict()\n",
+    "        for iostat in element:\n",
+    "            if iostat.tag == \"tps\":\n",
+    "                tmp_dict[iostat.tag] = iostat.text\n",
+    "            else:\n",
+    "                tmp_dict.update(iostat.attrib.copy())\n",
+    "        return tmp_dict\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def _parse_metric_swap_pages(element):\n",
+    "        \"\"\"swap pages\"\"\"\n",
+    "        ## pswpin|pswpout\n",
+    "        assert(element.attrib['per'] == 'second')\n",
+    "        tmp_dict = element.attrib.copy()\n",
+    "        tmp_dict.pop('per')\n",
+    "        return tmp_dict"
    ]
   },
   {
@@ -280,9 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sa = SarData()\n",
@@ -304,9 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sa.hostmeta"
@@ -316,7 +352,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -337,15 +372,16 @@
     "collapsed": true
    },
    "source": [
-    "### Load Averages"
+    "### Load Averages\n",
+    "* ```ldavg-1``` -\n",
+    "* ```ldavg-5``` -\n",
+    "* ```ldavg-15``` -"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -367,9 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -393,14 +427,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
     "    sa.aggregate0.plot(x=['timestamp'],\n",
     "                       y=['memused-percent', 'swpused-percent'],\n",
+    "                       style='-',\n",
+    "                       figsize=(15, 10))\n",
+    "except KeyError as err:\n",
+    "    print(\"KeyError: {}\".format(err))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Swap pages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    sa.aggregate0.plot(x=['timestamp'],\n",
+    "                       y=['pswpin', 'pswpout'],\n",
     "                       style='-',\n",
     "                       figsize=(15, 10))\n",
     "except KeyError as err:\n",
@@ -417,9 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -441,9 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -461,15 +511,15 @@
     "collapsed": true
    },
    "source": [
-    "### Huge pages utilisation"
+    "### Huge pages utilisation\n",
+    "* ```hugused``` -\n",
+    "* ```hugfree``` -"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -486,15 +536,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Huge pages percent utilisation"
+    "* ```hugused-percent```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -505,6 +553,138 @@
     "except KeyError as err:\n",
     "    print(\"KeyError: {}\".format(err))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### IO and transfar rate statistics\n",
+    "* ```tps``` - Transfers per second to physical devices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    sa.aggregate0.plot(x=['timestamp'],\n",
+    "                       y=['tps'],\n",
+    "                       style='-',\n",
+    "                       figsize=(15, 10))\n",
+    "except KeyError as err:\n",
+    "    print(\"KeyError: {}\".format(err))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ```rtps``` -\n",
+    "* ```wtps``` -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    sa.aggregate0.plot(x=['timestamp'],\n",
+    "                       y=['rtps', 'wtps'],\n",
+    "                       style='-',\n",
+    "                       figsize=(15, 10))\n",
+    "except KeyError as err:\n",
+    "    print(\"KeyError: {}\".format(err))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Blocks per second read|written\n",
+    "* ```bread``` -\n",
+    "* ```bwrtn``` -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    sa.aggregate0.plot(x=['timestamp'],\n",
+    "                       y=['bread', 'bwrtn'],\n",
+    "                       style='-',\n",
+    "                       figsize=(15, 10))\n",
+    "except KeyError as err:\n",
+    "    print(\"KeyError: {}\".format(err))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Paging statistics\n",
+    "\n",
+    "* ```pgpgin``` -\n",
+    "* ```pgpgout``` -\n",
+    "* ```fault``` -\n",
+    "* ```majflt``` -\n",
+    "* ```pgfree``` -\n",
+    "* ```pgscank``` -\n",
+    "* ```pgscand``` -\n",
+    "* ```pgsteal``` -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    sa.aggregate0.plot(x=['timestamp'],\n",
+    "                       y=['pgpgin', 'pgpgout', 'fault', 'majflt', 'pgfree', 'pgscank', 'pgscand', 'pgsteal'],\n",
+    "                       style='-',\n",
+    "                       figsize=(15, 10))\n",
+    "except KeyError as err:\n",
+    "    print(\"KeyError: {}\".format(err))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ```vmeff-percent``` -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    sa.aggregate0.plot(x=['timestamp'],\n",
+    "                       y=['vmeff-percent'],\n",
+    "                       style='-',\n",
+    "                       figsize=(15, 10))\n",
+    "except KeyError as err:\n",
+    "    print(\"KeyError: {}\".format(err))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
