--- a/sarcasm.ipynb
+++ b/sarcasm.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# SARcasm\n",
     "\n",
-    "A Jupyter notebook for helping [me] make sense of sysstat sar data.\n",
+    "**A Jupyter notebook for helping [me] make sense of sysstat sar data.**\n",
     "\n",
     "Copyright (c) 2017 Brendon Caligari, London, UK\n",
     "\n",
@@ -305,7 +305,18 @@
     "        assert(element.attrib['per'] == 'second')\n",
     "        tmp_dict = element.attrib.copy()\n",
     "        tmp_dict.pop('per')\n",
-    "        return tmp_dict"
+    "        return tmp_dict\n",
+    "    \n",
+    "    def plot_simple_aggregate0(self, y_vars):\n",
+    "        plot = None\n",
+    "        try:\n",
+    "            sa.aggregate0.plot(x=['timestamp'],\n",
+    "                               y=y_vars,\n",
+    "                               style='-',\n",
+    "                               figsize=(15, 10))\n",
+    "        except KeyError as err:\n",
+    "            print(\"KeyError: {}\".format(err))\n",
+    "        return plot"
    ]
   },
   {
@@ -372,10 +383,21 @@
     "collapsed": true
    },
    "source": [
-    "### Load Averages\n",
-    "* ```ldavg-1``` -\n",
-    "* ```ldavg-5``` -\n",
-    "* ```ldavg-15``` -"
+    "### Queue length and load averages\n",
+    "* ```ldavg-1``` - System load average over past 1 minute\n",
+    "* ```ldavg-5``` - System load average over past 5 minutes\n",
+    "* ```ldavg-15``` - System load average over past 15 minutes\n",
+    "\n",
+    "From ```uptime(1)```:\n",
+    "\n",
+    "       System load averages is the average number of processes that are either\n",
+    "       in a runnable or uninterruptable state.  A process in a runnable  state\n",
+    "       is  either using the CPU or waiting to use the CPU.  A process in unin‐\n",
+    "       terruptable state is waiting for some I/O access, eg waiting for  disk.\n",
+    "       The  averages  are  taken over the three time intervals.  Load averages\n",
+    "       are not normalized for the number of CPUs in a system, so a load  aver‐\n",
+    "       age  of 1 means a single CPU system is loaded all the time while on a 4\n",
+    "       CPU system it means it was idle 75% of the time."
    ]
   },
   {
@@ -384,13 +406,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    sa.aggregate0.plot(x=['timestamp'],\n",
-    "                       y=['ldavg-1', 'ldavg-5', 'ldavg-15'],\n",
-    "                       style='-',\n",
-    "                       figsize=(15,10))\n",
-    "except KeyError as err:\n",
-    "    print(\"KeyError: {}\".format(err))"
+    "sa.plot_simple_aggregate0(['ldavg-1', 'ldavg-5', 'ldavg-15'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ```runq-sz``` -\n",
+    "* ```plist-sz``` -"
    ]
   },
   {
@@ -406,13 +430,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    sa.aggregate0.plot(x=['timestamp'],\n",
-    "                       y=['memfree', 'memused', 'buffers', 'cached', 'swpused'],\n",
-    "                       style='-',\n",
-    "                       figsize=(15, 10))\n",
-    "except KeyError as err:\n",
-    "    print(\"KeyError: {}\".format(err))"
+    "sa.plot_simple_aggregate0(['memfree', 'memused', 'buffers', 'cached', 'swpused'])"
    ]
   },
   {
@@ -430,13 +448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    sa.aggregate0.plot(x=['timestamp'],\n",
-    "                       y=['memused-percent', 'swpused-percent'],\n",
-    "                       style='-',\n",
-    "                       figsize=(15, 10))\n",
-    "except KeyError as err:\n",
-    "    print(\"KeyError: {}\".format(err))"
+    "sa.plot_simple_aggregate0(['memused-percent', 'swpused-percent'])"
    ]
   },
   {
@@ -452,13 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    sa.aggregate0.plot(x=['timestamp'],\n",
-    "                       y=['pswpin', 'pswpout'],\n",
-    "                       style='-',\n",
-    "                       figsize=(15, 10))\n",
-    "except KeyError as err:\n",
-    "    print(\"KeyError: {}\".format(err))"
+    "sa.plot_simple_aggregate0(['pswpin', 'pswpout'])"
    ]
   },
   {
@@ -474,13 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    sa.aggregate0.plot(x=['timestamp'],\n",
-    "                       y=['proc'],\n",
-    "                       style='-',\n",
-    "                       figsize=(15, 10))\n",
-    "except KeyError as err:\n",
-    "    print(\"KeyError: {}\".format(err))"
+    "sa.plot_simple_aggregate0(['proc'])"
    ]
   },
   {
@@ -496,13 +496,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    sa.aggregate0.plot(x=['timestamp'],\n",
-    "                       y=['cswch'],\n",
-    "                       style='-',\n",
-    "                       figsize=(15, 10))\n",
-    "except KeyError as err:\n",
-    "    print(\"KeyError: {}\".format(err))"
+    "sa.plot_simple_aggregate0(['cswch'])"
    ]
   },
   {
@@ -522,14 +516,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    sa.aggregate0.plot(x=['timestamp'],\n",
-    "                           y=['hugused', 'hugfree'],\n",
-    "                           style='-',\n",
-    "                           figsize=(15, 10))\n",
-    "except KeyError as err:\n",
-    "    print(\"KeyError: {}\".format(err))\n",
-    "    "
+    "sa.plot_simple_aggregate0(['hugused', 'hugfree'])    "
    ]
   },
   {
@@ -545,13 +532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    sa.aggregate0.plot(x=['timestamp'],\n",
-    "                       y=['hugused-percent'],\n",
-    "                       style='-',\n",
-    "                       figsize=(15, 10))\n",
-    "except KeyError as err:\n",
-    "    print(\"KeyError: {}\".format(err))"
+    "sa.plot_simple_aggregate0(['hugused-percent'])"
    ]
   },
   {
@@ -568,13 +549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    sa.aggregate0.plot(x=['timestamp'],\n",
-    "                       y=['tps'],\n",
-    "                       style='-',\n",
-    "                       figsize=(15, 10))\n",
-    "except KeyError as err:\n",
-    "    print(\"KeyError: {}\".format(err))"
+    "sa.plot_simple_aggregate0(['tps'])"
    ]
   },
   {
@@ -591,13 +566,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    sa.aggregate0.plot(x=['timestamp'],\n",
-    "                       y=['rtps', 'wtps'],\n",
-    "                       style='-',\n",
-    "                       figsize=(15, 10))\n",
-    "except KeyError as err:\n",
-    "    print(\"KeyError: {}\".format(err))"
+    "sa.plot_simple_aggregate0(['rtps', 'wtps'])"
    ]
   },
   {
@@ -615,13 +584,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    sa.aggregate0.plot(x=['timestamp'],\n",
-    "                       y=['bread', 'bwrtn'],\n",
-    "                       style='-',\n",
-    "                       figsize=(15, 10))\n",
-    "except KeyError as err:\n",
-    "    print(\"KeyError: {}\".format(err))"
+    "sa.plot_simple_aggregate0(['bread', 'bwrtn'])"
    ]
   },
   {
@@ -646,13 +609,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    sa.aggregate0.plot(x=['timestamp'],\n",
-    "                       y=['pgpgin', 'pgpgout', 'fault', 'majflt', 'pgfree', 'pgscank', 'pgscand', 'pgsteal'],\n",
-    "                       style='-',\n",
-    "                       figsize=(15, 10))\n",
-    "except KeyError as err:\n",
-    "    print(\"KeyError: {}\".format(err))"
+    "sa.plot_simple_aggregate0(['pgpgin', 'pgpgout', 'fault', 'majflt', 'pgfree', 'pgscank', 'pgscand', 'pgsteal'])"
    ]
   },
   {
@@ -668,13 +625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    sa.aggregate0.plot(x=['timestamp'],\n",
-    "                       y=['vmeff-percent'],\n",
-    "                       style='-',\n",
-    "                       figsize=(15, 10))\n",
-    "except KeyError as err:\n",
-    "    print(\"KeyError: {}\".format(err))"
+    "sa.plot_simple_aggregate0(['vmeff-percent'])"
    ]
   },
   {
