--- a/sarcasm.ipynb
+++ b/sarcasm.ipynb
@@ -308,6 +308,7 @@
     "        return tmp_dict\n",
     "    \n",
     "    def plot_simple_aggregate0(self, y_vars):\n",
+    "        \"\"\"simple timeseries from self.aggregate0 columns\"\"\"\n",
     "        plot = None\n",
     "        try:\n",
     "            sa.aggregate0.plot(x=['timestamp'],\n",
@@ -413,15 +414,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ```runq-sz``` -\n",
-    "* ```plist-sz``` -"
+    "* ```runq-sz``` - number of tasks waiting to run\n",
+    "* ```plist-sz``` - number of tasks in process list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sa.plot_simple_aggregate0(['runq-sz', 'plist-sz'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Memory utilisation"
+    "### Memory utilisation statistics\n",
+    "* ```memfree``` - kb free memory available\n",
+    "* ```memused``` - kb memory used\n",
+    "* ```buffers``` - kb kernel buffers buffers\n",
+    "* ```cached``` - kb page cache and slabs\n",
+    "* ```swpused``` - kb used swap space"
    ]
   },
   {
@@ -439,7 +454,8 @@
     "collapsed": true
    },
    "source": [
-    "### Swap utilisation percentages"
+    "* ```memused-percent``` - memory used\n",
+    "* ```swpused-percent``` - swap used"
    ]
   },
   {
@@ -455,7 +471,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Swap pages"
+    "### Swapping statistics\n",
+    "* ```pswpin``` -\n",
+    "* ```pswpout``` -"
    ]
   },
   {
@@ -471,7 +489,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Processes per second"
+    "### Task creation and system switching\n",
+    "* ```proc``` - tasks created per second"
    ]
   },
   {
@@ -487,7 +506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Context switches per second"
+    "* ```cswch``` - context switches per second"
    ]
   },
   {
