--- a/sarcasm.ipynb
+++ b/sarcasm.ipynb
@@ -385,6 +385,7 @@
    },
    "source": [
     "### Queue length and load averages\n",
+    "\n",
     "* ```ldavg-1``` - System load average over past 1 minute\n",
     "* ```ldavg-5``` - System load average over past 5 minutes\n",
     "* ```ldavg-15``` - System load average over past 15 minutes\n",
@@ -432,6 +433,7 @@
    "metadata": {},
    "source": [
     "### Memory utilisation statistics\n",
+    "\n",
     "* ```memfree``` - kb free memory available\n",
     "* ```memused``` - kb memory used\n",
     "* ```buffers``` - kb kernel buffers buffers\n",
@@ -454,8 +456,8 @@
     "collapsed": true
    },
    "source": [
-    "* ```memused-percent``` - memory used\n",
-    "* ```swpused-percent``` - swap used"
+    "* ```memused-percent``` - percentage memory used\n",
+    "* ```swpused-percent``` - percentage swap used"
    ]
   },
   {
@@ -472,6 +474,7 @@
    "metadata": {},
    "source": [
     "### Swapping statistics\n",
+    "\n",
     "* ```pswpin``` -\n",
     "* ```pswpout``` -"
    ]
@@ -490,6 +493,7 @@
    "metadata": {},
    "source": [
     "### Task creation and system switching\n",
+    "\n",
     "* ```proc``` - tasks created per second"
    ]
   },
@@ -525,6 +529,7 @@
    },
    "source": [
     "### Huge pages utilisation\n",
+    "\n",
     "* ```hugused``` -\n",
     "* ```hugfree``` -"
    ]
@@ -559,6 +564,7 @@
    "metadata": {},
    "source": [
     "### IO and transfar rate statistics\n",
+    "\n",
     "* ```tps``` - Transfers per second to physical devices"
    ]
   },
@@ -593,6 +599,7 @@
    "metadata": {},
    "source": [
     "### Blocks per second read|written\n",
+    "\n",
     "* ```bread``` -\n",
     "* ```bwrtn``` -"
    ]
