--- a/sarcasm.ipynb
+++ b/sarcasm.ipynb
@@ -229,7 +229,8 @@
     "            'hugepages': cls._parse_metric_hugepages,\n",
     "            'paging': cls._parse_metric_paging,\n",
     "            'io': cls._parse_metric_io,\n",
-    "            'swap-pages': cls._parse_metric_swap_pages\n",
+    "            'swap-pages': cls._parse_metric_swap_pages,\n",
+    "            'kernel': cls._parse_kernel_statistics\n",
     "        }\n",
     "        if metric_tag in metric_parsers:\n",
     "            return metric_parsers[metric_tag]\n",
@@ -306,6 +307,16 @@
     "        tmp_dict = element.attrib.copy()\n",
     "        tmp_dict.pop('per')\n",
     "        return tmp_dict\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _parse_kernel_statistics(element):\n",
+    "        \"\"\"kernel statistics\"\"\"\n",
+    "        ## dentunusd|file-nr|inode-nr|pty-nr\n",
+    "        assert(element.attrib['per'] == \"second\")\n",
+    "        tmp_dict = dict()\n",
+    "        for memstat in element:\n",
+    "            tmp_dict[memstat.tag] = memstat.text\n",
+    "        return tmp_dict      \n",
     "    \n",
     "    def plot_simple_aggregate0(self, y_vars):\n",
     "        \"\"\"simple timeseries from self.aggregate0 columns\"\"\"\n",
@@ -655,13 +666,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kernel table statistics\n",
+    "\n",
+    "* ```dentunusd``` - unused entries in directory cache"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sa.plot_simple_aggregate0(['dentunusd'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ```file-nr``` - file handles in use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sa.plot_simple_aggregate0(['file-nr'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ```inode-nr``` - inode handles in use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sa.plot_simple_aggregate0(['inode-nr'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ```pty-nr``` - pseudo-terninals in use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sa.plot_simple_aggregate0(['pty-nr'])"
+   ]
   }
  ],
  "metadata": {
