kernel stats change

--- a/sarcasm.ipynb
+++ b/sarcasm.ipynb
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "sa_directory = './z2'\n",
-    "sa_files = [\"sa04\", \"sa05\", \"sa06\", 'sa07', 'sa08', 'sa09', 'sa10', 'sa11', 'sa12', 'sa13', 'sa14']"
+    "sa_files = [\"sa05\", \"sa06\", 'sa07', 'sa08', 'sa09', 'sa10', 'sa11', 'sa12', 'sa13']"
    ]
   },
   {
@@ -312,11 +312,14 @@
     "    def _parse_kernel_statistics(element):\n",
     "        \"\"\"kernel statistics\"\"\"\n",
     "        ## dentunusd|file-nr|inode-nr|pty-nr\n",
-    "        assert(element.attrib['per'] == \"second\")\n",
-    "        tmp_dict = dict()\n",
-    "        for memstat in element:\n",
-    "            tmp_dict[memstat.tag] = memstat.text\n",
-    "        return tmp_dict      \n",
+    "        if 'per' in element.attrib:\n",
+    "            assert(element.attrib['per'] == \"second\")\n",
+    "            tmp_dict = dict()\n",
+    "            for memstat in element:\n",
+    "                tmp_dict[memstat.tag] = memstat.text\n",
+    "        else:\n",
+    "            tmp_dict = element.attrib.copy()\n",
+    "        return tmp_dict\n",
     "    \n",
     "    def plot_simple_aggregate0(self, y_vars):\n",
     "        \"\"\"simple timeseries from self.aggregate0 columns\"\"\"\n",
@@ -343,7 +346,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa = SarData()\n",
