--- a/sarcasm.ipynb
+++ b/sarcasm.ipynb
@@ -74,7 +74,7 @@
    },
    "outputs": [],
    "source": [
-    "sa_directory = './z2'\n",
+    "sa_directory = './z1'\n",
     "sa_files = [\"sa05\", \"sa06\", 'sa07', 'sa08', 'sa09', 'sa10', 'sa11', 'sa12', 'sa13']"
    ]
   },
@@ -166,9 +166,11 @@
     "                                                           \"%Y-%m-%dT%H:%M:%S\")\n",
     "                            tmp_datum0 = {'timestamp': datum_time}\n",
     "                            for metric in timestamp:\n",
-    "                                metric_parser = self.get_metric_parser(metric.tag)\n",
-    "                                if metric_parser:\n",
-    "                                    tmp_datum0.update(metric_parser(metric))\n",
+    "                                # Simple key value statistics for regular polls will all go\n",
+    "                                # into a single dict 'aggregate0'\n",
+    "                                aggregate0_parser = self.get_aggregate0_parser(metric.tag)\n",
+    "                                if aggregate0_parser:\n",
+    "                                    tmp_datum0.update(aggregate0_parser(metric))\n",
     "                            self._raw_aggregate0.append(tmp_datum0)\n",
     "                    else:\n",
     "                        hostmeta_parser = self.get_hostmeta_parser(host_child.tag)\n",
@@ -202,9 +204,9 @@
     "\n",
     "    @classmethod\n",
     "    def get_hostmeta_parser(cls, meta_tag):\n",
-    "        \"\"\"Returns a parser for Elements under 'host'\"\"\"\n",
+    "        \"\"\"Returns a parser for elements under 'host'\"\"\"\n",
     "        ## we can comment out any problematic ones at runtime\n",
-    "        meta_parsers ={\n",
+    "        meta_parsers = {\n",
     "            'sysname': cls._parse_meta_default,\n",
     "            'release': cls._parse_meta_default,\n",
     "            'comments': cls._parse_meta_default,\n",
@@ -219,18 +221,18 @@
     "        return None\n",
     "        \n",
     "    @classmethod\n",
-    "    def get_metric_parser(cls, metric_tag):\n",
-    "        \"\"\"Returns a parser for Elements under 'host->statistics'\"\"\"\n",
+    "    def get_aggregate0_parser(cls, metric_tag):\n",
+    "        \"\"\"Returns a parser for elements under 'host->statistics'\"\"\"\n",
     "        ## we can comment out any problematic ones at runtime\n",
     "        metric_parsers = {\n",
-    "            'queue': cls._parse_metric_queue,\n",
-    "            'memory': cls._parse_metric_memory,\n",
-    "            'process-and-context-switch': cls._parse_metric_proc_cswch,\n",
-    "            'hugepages': cls._parse_metric_hugepages,\n",
-    "            'paging': cls._parse_metric_paging,\n",
-    "            'io': cls._parse_metric_io,\n",
-    "            'swap-pages': cls._parse_metric_swap_pages,\n",
-    "            'kernel': cls._parse_kernel_statistics\n",
+    "            'queue': cls._parse_absorb_level,\n",
+    "            'memory': cls._parse_absorb_level,\n",
+    "            'process-and-context-switch': cls._parse_absorb_level,\n",
+    "            'hugepages': cls._parse_absorb_level,\n",
+    "            'paging': cls._parse_absorb_level,\n",
+    "            'io': cls._parse_absorb_level,\n",
+    "            'swap-pages': cls._parse_absorb_level,\n",
+    "            'kernel': cls._parse_absorb_level\n",
     "        }\n",
     "        if metric_tag in metric_parsers:\n",
     "            return metric_parsers[metric_tag]\n",
@@ -238,87 +240,19 @@
     "\n",
     "    @staticmethod\n",
     "    def _parse_meta_default(element):\n",
+    "        \"\"\"returns text field of a sar metadata element\"\"\"\n",
     "        return element.text.strip()\n",
     "    \n",
     "    @staticmethod\n",
-    "    def _parse_metric_queue(element):\n",
-    "        \"\"\"runq and load averages\"\"\"\n",
-    "        ## runq-sz|plist-sz|ldavg-1|ldavg-5|ldavg-15\n",
-    "        return element.attrib.copy()\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def _parse_metric_memory(element):\n",
-    "        \"\"\"memory statistics\"\"\"\n",
-    "        ## memfree|memused|memused-percent|buffers|cached|commit|commit-percent\n",
-    "        ## swpfree|swpused|swpused-percent|swpcad|swpcad-percent|frmpg|bufpg|campg\n",
-    "        assert(element.attrib['per'] == 'second' and element.attrib['unit'] == 'kB')\n",
+    "    def _parse_absorb_level(element):\n",
+    "        \"\"\"returns a dict of flattened attributes and element tags with some cleanup\"\"\"\n",
     "        tmp_dict = dict()\n",
-    "        for memstat in element:\n",
-    "            tmp_dict[memstat.tag] = memstat.text\n",
-    "        return tmp_dict\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def _parse_metric_proc_cswch(element):\n",
-    "        \"\"\"process and context switch\"\"\"\n",
-    "        ## proc|cswch\n",
-    "        ## Note: 'per' is an attrib we don't need\n",
-    "        assert(element.attrib['per'] == 'second')\n",
-    "        tmp_dict = element.attrib.copy()\n",
-    "        tmp_dict.pop('per')\n",
-    "        return tmp_dict\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def _parse_metric_hugepages(element):\n",
-    "        \"\"\"huge pages\"\"\"\n",
-    "        ## hugfree|hugused|hugused-percent\n",
-    "        assert(element.attrib['unit'] == \"kB\")\n",
-    "        tmp_dict = dict()\n",
-    "        for hpstat in element:\n",
-    "            tmp_dict[hpstat.tag] = hpstat.text\n",
-    "        return tmp_dict\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def _parse_metric_paging(element):\n",
-    "        \"\"\"paging statistics\"\"\"\n",
-    "        assert(element.attrib['per'] == \"second\")\n",
-    "        ## paging pgpgin|pgpgout|fault|majflt|pgfree|pgscank|pgscand|pgsteal|vmeff-percent\n",
-    "        tmp_dict = element.attrib.copy()\n",
-    "        tmp_dict.pop('per')\n",
-    "        return tmp_dict\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def _parse_metric_io(element):\n",
-    "        \"\"\"io metrics\"\"\"\n",
-    "        ## tps | rtps | bread | wtps | bwrtn\n",
-    "        assert(element.attrib['per'] == \"second\")\n",
-    "        tmp_dict = dict()\n",
-    "        for iostat in element:\n",
-    "            if iostat.tag == \"tps\":\n",
-    "                tmp_dict[iostat.tag] = iostat.text\n",
-    "            else:\n",
-    "                tmp_dict.update(iostat.attrib.copy())\n",
-    "        return tmp_dict\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def _parse_metric_swap_pages(element):\n",
-    "        \"\"\"swap pages\"\"\"\n",
-    "        ## pswpin|pswpout\n",
-    "        assert(element.attrib['per'] == 'second')\n",
-    "        tmp_dict = element.attrib.copy()\n",
-    "        tmp_dict.pop('per')\n",
-    "        return tmp_dict\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def _parse_kernel_statistics(element):\n",
-    "        \"\"\"kernel statistics\"\"\"\n",
-    "        ## dentunusd|file-nr|inode-nr|pty-nr\n",
-    "        if 'per' in element.attrib:\n",
-    "            assert(element.attrib['per'] == \"second\")\n",
-    "            tmp_dict = dict()\n",
-    "            for memstat in element:\n",
-    "                tmp_dict[memstat.tag] = memstat.text\n",
-    "        else:\n",
-    "            tmp_dict = element.attrib.copy()\n",
+    "        for child in element:\n",
+    "            tmp_dict[child.tag] = child.text\n",
+    "        tmp_dict.update(element.attrib.copy())\n",
+    "        for undesired in ['per', 'unit']:\n",
+    "            if undesired in tmp_dict:\n",
+    "                tmp_dict.pop(undesired)\n",
     "        return tmp_dict\n",
     "    \n",
     "    def plot_simple_aggregate0(self, y_vars):\n",
@@ -346,9 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sa = SarData()\n",
@@ -614,8 +546,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Blocks per second read|written\n",
-    "\n",
     "* ```bread``` -\n",
     "* ```bwrtn``` -"
    ]
