kernel stats regression

--- a/sarcasm.ipynb
+++ b/sarcasm.ipynb
@@ -248,7 +248,10 @@
     "        \"\"\"returns a dict of flattened attributes and element tags with some cleanup\"\"\"\n",
     "        tmp_dict = dict()\n",
     "        for child in element:\n",
-    "            tmp_dict[child.tag] = child.text\n",
+    "            if child.text:\n",
+    "                tmp_dict[child.tag] = child.text\n",
+    "            else:\n",
+    "                tmp_dict.update(child.attrib.copy())\n",
     "        tmp_dict.update(element.attrib.copy())\n",
     "        for undesired in ['per', 'unit']:\n",
     "            if undesired in tmp_dict:\n",
