wrapping up for the day

--- a/sarcasm.ipynb
+++ b/sarcasm.ipynb
@@ -262,10 +262,10 @@
     "        \"\"\"simple timeseries from self.aggregate0 columns\"\"\"\n",
     "        plot = None\n",
     "        try:\n",
-    "            sa.aggregate0.plot(x=['timestamp'],\n",
-    "                               y=y_vars,\n",
-    "                               style='-',\n",
-    "                               figsize=(15, 10))\n",
+    "            plot = sa.aggregate0.plot(x=['timestamp'],\n",
+    "                                      y=y_vars,\n",
+    "                                      style='-',\n",
+    "                                      figsize=(15, 10))\n",
     "        except KeyError as err:\n",
     "            print(\"KeyError: {}\".format(err))\n",
     "        return plot"
@@ -283,7 +283,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sa = SarData()\n",
